# dag-opt

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  answers.txt  cmake_install.cmake  common.c  common.h  opt  opt.c  opt4.c  opt5.c  opt6.c  opt_old.c  our4.c  our5.c  our6.c  random.sh  regression.sh  regression_correct_result.txt  regression_test.sh  run.sh  sopt.c
